<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="arcades">Arcades</string>
    <string name="cancel">Cancel</string>
    <string name="computers">Computers</string>
    <string name="confirm_play_game">Play %s?</string>
    <string name="connect">Connect</string>
    <string name="consoles">Consoles</string>
    <string name="copy_qr_data">Copy QR Data</string>
    <string name="credits">Credits</string>
    <string name="description">Description</string>
    <string name="developer">Developer</string>
    <string name="enter_mister_ip_address">Enter MiSTer IP address</string>
    <string name="error">Error</string>
    <string name="failed_to_connect">Failed to Connect</string>
    <string name="failed_to_connect_message">Ensure that both devices are on the same network and that the IP address of the MiSTer has been set correctly.</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="games">Games</string>
    <string name="genre">Genre</string>
    <string name="handhelds">Handhelds</string>
    <string name="metadata_not_supported">Metadata is not supported for this platform.</string>
    <string name="mistercon">mistercon</string>
    <string name="no_camera_permission">Camera permission is required to use this feature.</string>
    <string name="no_data_was_found_for_game">No data found for %s.</string>
    <string name="ok">OK</string>
    <string name="play">Play</string>
    <string name="publisher">Publisher</string>
    <string name="random">Random</string>
    <string name="region">Region</string>
    <string name="release_date">Release Date</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="search">Search</string>
    <string name="set_ip_address">Set IP address</string>
    <string name="subscribe">Subscribe for bonus features!\npatreon.com/tatsutron</string>
    <string name="sync">Sync</string>
    <string name="sync_library">Sync library</string>
    <string name="system">System</string>
    <string name="thank_you">❤ Thank you so much! ❤</string>
    <string name="toggle_menu">Toggle Menu</string>
    <string name="unfavorite">Unfavorite</string>
</resources>
