<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_800">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/game_toolbar"
            style="@style/Toolbar"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_back" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:divider="@drawable/vertical_divider_small"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_small"
                    android:showDividers="middle">

                    <com.tatsutron.remote.component.MetadataCard
                        android:id="@+id/publisher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hint="@string/publisher" />

                    <com.tatsutron.remote.component.MetadataCard
                        android:id="@+id/developer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hint="@string/developer" />

                    <com.tatsutron.remote.component.MetadataCard
                        android:id="@+id/release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hint="@string/release_date" />

                    <com.tatsutron.remote.component.MetadataCard
                        android:id="@+id/region"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hint="@string/region" />

                    <com.tatsutron.remote.component.MetadataCard
                        android:id="@+id/genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hint="@string/genre" />

                    <com.tatsutron.remote.component.MetadataCard
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hint="@string/description" />

                    <com.tatsutron.remote.component.ImageCard
                        android:id="@+id/front_cover"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.tatsutron.remote.component.ImageCard
                        android:id="@+id/back_cover"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.tatsutron.remote.component.ImageCard
                        android:id="@+id/cartridge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </ScrollView>

            <TextView
                android:id="@+id/no_data_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_large"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large"
                android:visibility="gone" />

        </FrameLayout>

    </LinearLayout>

    <com.leinardi.android.speeddial.SpeedDialOverlayLayout
        android:id="@+id/speed_dial_overlay_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay"
        app:clickable_overlay="true" />

    <com.leinardi.android.speeddial.SpeedDialView
        android:id="@+id/speed_dial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:sdMainFabClosedBackgroundColor="@color/gray_900"
        app:sdMainFabClosedIconColor="@color/primary_500"
        app:sdMainFabClosedSrc="@drawable/ic_plus"
        app:sdMainFabOpenedBackgroundColor="@color/gray_900"
        app:sdOverlayLayout="@id/speed_dial_overlay_game" />

</FrameLayout>